apps/releases/03-core/raw/finance-app-database-service/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-app-database-service
spec:
  selector:
    app: finance-app-database-service
  ports:
  - protocol: "TCP"
    port: 8091
    targetPort: 8000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-app-database-service
spec:
  selector:
    matchLabels:
      app: finance-app-database-service
  replicas: 1
  template:
    metadata:
      labels:
        app: finance-app-database-service
    spec:
      containers:
      - name: finance-app-database-service
        image: registry.lucas.engineering/finance_app_database_service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-app-database-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: finance-db-v2.lucas.engineering
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finance-app-database-service
            port:
              number: 8091
  tls:
  - hosts:
    - finance-db-v2.lucas.engineering
    secretName: finance-db-lucas-engineering-tls
